welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:8: error: value =< is not a member of Int
		if (nums(i)>max2 && nums(i)=<max) {
                                           ^